webgui/gvc3200_new/src/css/frame.css
.grayfont{ color:#a3a3a3; }
select { display:block;width:150px; height:18px;text-decoration:none;line-height:24px;color:#000;}
ul {list-style: none;}
a, a:hover{text-decoration: none;}
/*××××××××××××××××××××××××登录页面样式××××××××××××××××××××××××××××××××××××××××××*/
#container {
    height: 100%;
}
.reactRoot {
    height: 100%;
}
.bgDiv {
    width: 100%;
    height:100%;
    margin:0;
    overflow-x:hidden;
    overflow: auto;
    background:url("../img/login_background.png") #1d222d;
    background-size: cover;
    background-position: center center;
}

.ant-modal-wrap{
    z-index: 1200;
}

.mainDiv {
    background: transparent;
    color: #EBEBEB;
    font: 13px Arial;
    height: 480px;
    margin-top: -240px;
    position: absolute;
    top: 50%;
    width: 100%;
}

.titleDiv {
    text-align:center;
    font-weight:bold;
    color: #eff2f9;
}

.titleSpan {
    font-size:50px;
    letter-spacing: 3px;
    text-shadow:7px 7px 7px rgba(14,26,55,0.6);
}

.ellips{
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.loginDiv {
    position:relative;
    z-index:100;
}
#loginbtn,#loginbtn2{
    border:none;
    color: white;
    width: 260px;
    height:44px;
    line-height:44px;
    cursor: pointer;
    font-size: 18px;
    font-weight: bold;
    margin:30px 0 0 70px;
    padding:0;
    text-decoration: none;
    outline: none;
    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#5689ff), to(#2d65e7));
    border-radius: 22px;
    margin-top: 50px;
    box-shadow:15px 15px 15px rgba(14,26,55,0.25) ;
}

#loginbtn:disabled,#loginbtn2:disabled {
    color:gray;cursor:text;
}

#password,#adminpasswd,#adminpasswd2,#userpasswd,#userpasswd2{
    padding-right: 40px;
}
.expose {
    clear: both;
    display: block;
    width: 400px;
    height: 115px;
    margin: 0 auto;
    padding: 0;
}

.expose input, .expose .ant-select-selection{
    border:none;
    height:44px;
    line-height:44px;
    margin:10px 0 0 0;
    padding:0 10px 0 47px;
    font-size: 1.125rem;
    outline:none;
}

.expose input#identifyingCode{
    padding:12px 10px 13px 20px;
    width: 250px;
}

.input-wrap{
    position: relative;
}

.input-wrap .input-ico{
    position: absolute;
    top: 23px;
    left:20px;
    width: 15px;
    height: 15px;
    background-image: url(../img/icon.png);
    background-repeat: no-repeat;
}

.input-wrap .userIcon{
    background-position: -700px 0px;
}

.input-wrap .lockIcon{
    background-position: -733px 0px;
    z-index: 10;
}

.expose .ant-select-selection__rendered{
    line-height:22px;
}

.expose input:hover, .expose input:focus, .expose .ant-select-selection:hover, .expose .ant-select-selection:focus, .loginlan:hover, .loginlan:focus {
    color:#0d1017;
}

.expose .ant-form-item {
    margin-bottom: 5px;
    width: 400px;
}

.loginlanbox{
    position: fixed;
    top: 10px;
    right: 66px;
    z-index: 6666;
}

.loginlan{
    width: 100px;
    height: 40px;
    line-height: 42px;
    margin-top: 10px;
    text-align: center;
}

.ant-form-item-control .loginlan span{
    display: inline-block;
    height: 100%;
    width: 95%;
    font-size: 1rem;
    color:#C9D5DC;
    padding-left: 20px;
    cursor: pointer;
}

.ant-dropdown{
    z-index:1113;
}

.loginlan .ant-dropdown-trigger {
    font-size: 14px;
}

.loginlanmenu{
    width: 100px;
    font-size: 14px;
    border-radius: 2px;
    margin-left: 2px;
    background: rgba(255,255,255,0.9);
    padding:1px ;
}

.loginlanmenu li{
    width: 100%;
    height: 30px;
    line-height: 30px;
    color: #596680;
    padding: 0;
}

.loginlanmenu li:last-child{
    border: none;
}

.loginlanmenu li:hover{
    background: #3d77ff;
    border-radius: 2px;
    color: #fff;
    font-weight: bold;
}

.loginlanmenu li span{
    padding:0 18px;
    width: 100%;
    height: 100%;
    display: inline-block;
    position: relative;
}

.loginFooter{
    width: 100%;
    height: 120px;
    position: absolute;
    bottom: 0;
    text-align: center;
    color: #798189;
    font-size: 0.875rem;
}
/****************************CSS3动画************************************/

/*******淡入*******/
.a-fadein{
    -webkit-animation:fadein 0.4s linear;
    -moz-animation:fadein 0.4s linear;
    -ms-animation:fadein 0.4s linear;
    animation:fadein 0.4s linear;
    -webkit-animation-fill-mode:forwards;
    -moz-animation-fill-mode:forwards;
    -ms-animation-fill-mode:forwards;
    animation-fill-mode:forwards;
}

@-webkit-keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:229px}
}
@-moz-keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:229px}
}
@-ms-keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:229px}
}
@keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:229px}
}

/* 淡出 */
.a-fadeout{
    -webkit-animation:fadeout 0.4s linear;
    -moz-animation:fadeout 0.4s linear;
    -ms-animation:fadeout 0.4s linear;
    animation:fadeout 0.4s linear;
    -webkit-animation-fill-mode:forwards;
    -moz-animation-fill-mode:forwards;
    -ms-animation-fill-mode:forwards;
    animation-fill-mode:forwards;
}

@-webkit-keyframes fadeout{
    0%{opacity:1;height:229px}
    100%{opacity:0;height:0}
}
@-moz-keyframes fadeout{
    0%{opacity:1;height:229px}
    100%{opacity:0;height:0}
}
@-ms-keyframes fadeout{
    0%{opacity:1;height:229px}
    100%{opacity:0;height:0}
}
@keyframes fadeout{
    0%{opacity:1;height:229px}
    100%{opacity:0;height:0;}
}

.b-fadein{
    -webkit-animation:fadein 0.4s linear;
    -moz-animation:fadein 0.4s linear;
    -ms-animation:fadein 0.4s linear;
    animation:fadein 0.4s linear;
    -webkit-animation-fill-mode:forwards;
    -moz-animation-fill-mode:forwards;
    -ms-animation-fill-mode:forwards;
    animation-fill-mode:forwards;
}

@-webkit-keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:269px}
}
@-moz-keyframes fadein{
    0%{opacity:0;height:0}
    100%{opacity:1;height:269px}
}
/* ... */

